objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Filter__c</fullName>
        <formula>IF(
ISPICKVAL(Family, "Work Comp"), 
"WORK", 
 
IF(
ISPICKVAL(Family, "Soft Cost"), 
"SOFT", 

IF(
ISPICKVAL(Family, "Surcharge"), 
"SURCHARGE", 

"OTHER") ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HighRisk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Plan</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductID__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RedFlagDisplay__c</fullName>
        <formula>IF( 
HighRisk__c = TRUE, 
IMAGE(
"/servlet/servlet.FileDownload?file=01534000002Giw2", "flag", 30, 30), 
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>High Risk</label>
        <type>Text</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Plan__c</columns>
        <columns>SBQQ__ConfigurationType__c</columns>
        <columns>SBQQ__ConfigurationEvent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>AllProductsHealthcare</fullName>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Plan__c</columns>
        <columns>SBQQ__SortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Healthcare</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Products - Healthcare</label>
    </listViews>
    <listViews>
        <fullName>All_Products_Workers_Comp</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>SBQQ__SortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Work Comp</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Products - Workers Comp</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Plan__c</columns>
        <columns>SBQQ__ConfigurationType__c</columns>
        <columns>SBQQ__ConfigurationEvent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Products</label>
    </listViews>
    <listViews>
        <fullName>New_Products</fullName>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>SBQQ__Component__c</columns>
        <columns>Plan__c</columns>
        <columns>SBQQ__QuantityEditable__c</columns>
        <columns>SBQQ__DefaultQuantity__c</columns>
        <columns>SBQQ__PriceEditable__c</columns>
        <columns>SBQQ__SubscriptionPricing__c</columns>
        <columns>SBQQ__SubscriptionTerm__c</columns>
        <columns>SBQQ__SubscriptionType__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>10/26/2017 12:00 AM</value>
        </filters>
        <label>New Products</label>
    </listViews>
</CustomObject>